--- a/workspace.html
+++ b/workspace.html
@@ -104,7 +104,7 @@
         <p class="lane-desc">Applications you&rsquo;ve submitted and are waiting to hear back on.</p>
       </div>
       <div class="cards" data-drop="applied"></div>
-      <div class="empty">Drag cards here</div>
+      <div class="empty">Drag Applications here</div>
     </div>
     <div class="lane" data-col="screening">
       <div class="lanehead">
@@ -112,7 +112,7 @@
         <p class="lane-desc">Move your application to this stage when a recruiter has replied or requested more information.</p>
       </div>
       <div class="cards" data-drop="screening"></div>
-      <div class="empty">Drag cards here</div>
+      <div class="empty">Drag Applications here</div>
     </div>
     <div class="lane" data-col="interviewing">
       <div class="lanehead">
@@ -120,15 +120,15 @@
         <p class="lane-desc">Move your application to this stage when interviews have been scheduled or are in progress.</p>
       </div>
       <div class="cards" data-drop="interviewing"></div>
-      <div class="empty">Drag cards here</div>
+      <div class="empty">Drag Applications here</div>
     </div>
     <div class="lane" data-col="offer">
       <div class="lanehead">
-        <div class="lanehead-top"><h3>Offer</h3><span class="count" data-count="offer">0</span></div>
+        <div class="lanehead-top"><h3>Offer Recieved</h3><span class="count" data-count="offer">0</span></div>
         <p class="lane-desc">Move your application to this stage when you&rsquo;ve received a verbal or written offer.</p>
       </div>
       <div class="cards" data-drop="offer"></div>
-      <div class="empty">Drag cards here</div>
+      <div class="empty">Drag Applications here</div>
     </div>
     <div class="lane" data-col="rejected">
       <div class="lanehead">
@@ -136,7 +136,7 @@
         <p class="lane-desc">Move your application to this stage when the process didn&rsquo;t move forward or the company declined your application.</p>
       </div>
       <div class="cards" data-drop="rejected"></div>
-      <div class="empty">Drag cards here</div>
+      <div class="empty">Drag Applications here</div>
     </div>
   </div>
 </div>
