--- a/workspace.html
+++ b/workspace.html
@@ -108,7 +108,7 @@
     </div>
     <div class="lane" data-col="screening">
       <div class="lanehead">
-        <div class="lanehead-top"><h3>Screening / Response Received</h3><span class="count" data-count="screening">0</span></div>
+        <div class="lanehead-top"><h3>Screening</h3><span class="count" data-count="screening">0</span></div>
         <p class="lane-desc">Move your application to this stage when a recruiter has replied or requested more information.</p>
       </div>
       <div class="cards" data-drop="screening"></div>
