Align lane card sections

--- a/workspace.html
+++ b/workspace.html
@@ -42,7 +42,7 @@
   /* Board */
   .board{max-width:1200px;margin:14px auto;padding:0 16px 40px;display:grid;grid-template-columns:repeat(5,minmax(0,1fr));gap:14px}
   .lane{background:rgba(255,255,255,.88);border:1px solid #f2caa6;border-radius:16px;min-height:320px;display:flex;flex-direction:column}
-  .lanehead{padding:12px 12px 10px;border-bottom:1px solid #f5d6b8}
+  .lanehead{padding:12px 12px 10px;border-bottom:1px solid #f5d6b8;display:flex;flex-direction:column;gap:6px;min-height:148px}
   .lanehead-top{display:flex;align-items:center;justify-content:space-between;gap:10px}
   .lanehead h3{margin:0;font-size:16px}
   .lane-desc{margin:6px 0 0;font-size:12px;color:#9f9f9f;line-height:1.4}
