--- a/workspace.html
+++ b/workspace.html
@@ -59,8 +59,8 @@
   .empty{flex:1;display:grid;place-items:center;color:#b07a45;font-size:13px;padding:18px}
 
   /* Modal */
-  .modalBG{position:fixed;inset:0;background:rgba(0,0,0,.25);display:none;align-items:center;justify-content:center;z-index:30}
-  .modal{background:#fff;border:1px solid #f2caa6;border-radius:14px;box-shadow:var(--shadow);width:min(560px,92%);padding:16px}
+  .modalBG{position:fixed;inset:0;background:rgba(0,0,0,.25);display:none;align-items:center;justify-content:center;z-index:30;padding:20px;overflow:auto}
+  .modal{background:#fff;border:1px solid #f2caa6;border-radius:14px;box-shadow:var(--shadow);width:min(560px,92%);max-height:calc(100vh - 40px);padding:16px;overflow:auto}
   .row{display:grid;grid-template-columns:1fr 1fr;gap:10px}
   label{font-size:13px;font-weight:600}
   input,textarea{width:100%;padding:10px;border:1px solid #f0d3b5;border-radius:10px;font-family:inherit}
